--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </div>
 
 </div>
-<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script src="/jquery.js"></script>
 <script src="http://apps.bdimg.com/libs/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.11/js/dataTables.bootstrap.min.js"></script>
